--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
             <hr>
-            <button class="btn btn-primary btn-xl">Find out more</button>
+            <a href="https://mailchi.mp/85f8c0ff75a3/startup-program">
+              <button class="btn btn-primary btn-xl">Find out more</button>
+            </a>
         </section>
       </div>
     </div>
