--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <section class="text-center col-12">
             <hr>
             <a href="https://mailchi.mp/85f8c0ff75a3/startup-program">
-              <button class="btn btn-primary btn-xl" style="background-color: rgb(226, 57, 27);
-              border-color: rgb(226, 57, 27);border-width: 4px;">Find out more</button>
+              <button class="btn btn-primary btn-xl">Find out more</button>
             </a>
         </section>
       </div>
